src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail15.jova
class DoubleDecClass{

}
class DoubleDecClass{

}



class Main {

  public int main() {

    return 0;
  }

}